# langchain-practice

./: README.md  main.py  pyproject.toml  requirements.txt
